# 2048

./: .gitignore  Cargo.toml  PROFILE_README.md  README.md  check_training_progress.py
.github/workflows/: ci.yml  deploy.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  solver.rs
python/: Cargo.toml  README.md  pyproject.toml
python/python/: game_2048.pyi
python/src/: lib.rs
rl/: README.md  dqn_agent.py  dqn_cnn_agent.py  evaluate.py  export_all_models.py  export_onnx.py  game_env.py  pyproject.toml  requirements.txt  train.py  train_all_models.py
rl/checkpoints/: best_model.pt  checkpoint_1000.pt  checkpoint_10000.pt  checkpoint_2000.pt  checkpoint_3000.pt  checkpoint_4000.pt  checkpoint_5000.pt  checkpoint_6000.pt  checkpoint_7000.pt  checkpoint_8000.pt  checkpoint_9000.pt  dqn_basic_100k_best.pt  dqn_basic_100k_final.pt  dqn_cnn_best.pt  dqn_shaped_best.pt  final_model.pt
rl/runs/dqn_20260102_015618/: events.out.tfevents.1767315378.MacBook-Air.local.38330.0
rl/runs/dqn_20260102_015655/: events.out.tfevents.1767315415.MacBook-Air.local.38919.0
rl/runs/dqn_basic_100k_20260102_025624/: events.out.tfevents.1767318984.MacBook-Air.local.42112.0
rl/runs/dqn_cnn_20260102_172236/: events.out.tfevents.1767370957.MacBook-Air.local.6093.0
rl/runs/dqn_cnn_20260102_172704/: events.out.tfevents.1767371225.MacBook-Air.local.7534.0
rl/runs/dqn_cnn_20260102_173300/: events.out.tfevents.1767371580.MacBook-Air.local.8228.0
rl/runs/dqn_shaped_20260102_025624/: events.out.tfevents.1767344062.MacBook-Air.local.42112.1
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/models/: ai_model.onnx  ai_model.onnx.data  dqn_100k.onnx  dqn_100k.onnx.data  dqn_10k.onnx  dqn_cnn.onnx  dqn_cnn.onnx.data  dqn_shaped.onnx  dqn_shaped.onnx.data  manifest.json
web/src/: ai-player.ts  expectimax-bot.ts  main.ts  rust-solver-bot.ts  style.css
