[package]
name = "game-2048-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for the 2048 game engine using PyO3"

[lib]
name = "game_2048"
crate-type = ["cdylib"]

[dependencies]
game-2048-core.workspace = true
pyo3 = { version = "0.20", features = ["extension-module"] }
