[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "game-2048"
version = "0.1.0"
description = "Python bindings for the 2048 game engine (Rust + PyO3)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["2048", "game", "reinforcement-learning", "ai", "rust"]

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "game_2048"
