[package]
name = "game-2048-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for the 2048 game engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
game-2048-core.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true
